fixed spacing below low temp in forecast section

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,7 @@ h6 {
   );
   display: block;
   margin: 0 auto;
+  padding: 6px;
 }
 
 .around:hover {
